TS-2457 Fix usage around strtol, bad review on my part