example/protocol/Protocol.c
@@ -105,6 +105,7 @@ TSPluginInit(int argc, const char *argv[])
 {
   TSPluginRegistrationInfo info;
   char *end;
+  int tmp;
 
   info.plugin_name = "output-header";
   info.vendor_name = "MyCompany";
@@ -125,9 +126,9 @@ TSPluginInit(int argc, const char *argv[])
     printf("[protocol_plugin] Usage: protocol.so accept_port server_port\n");
     printf("[protocol_plugin] Wrong arguments. Using deafult ports.\n");
   } else {
-    strtol(argv[1], &end, 10);
+    tmp = strtol(argv[1], &end, 10);
     if (*end == '\0') {
-      accept_port = strtol(argv[1], &end, 10);
+      accept_port = tmp;
       TSDebug("protocol", "using accept_port %d", accept_port);
       printf("[protocol_plugin] using accept_port %d\n", accept_port);
     } else {
@@ -135,9 +136,9 @@ TSPluginInit(int argc, const char *argv[])
       printf("Using deafult port %d\n", accept_port);
     }
 
-    strtol(argv[2], &end, 10);
+    tmp = strtol(argv[2], &end, 10);
     if (*end == '\0') {
-      server_port = strtol(argv[2], &end, 10);
+      server_port = tmp;
       TSDebug("protocol", "using server_port %d", server_port);
       printf("[protocol_plugin] using server_port %d\n", server_port);
     } else {
